--- a/css/popup.css
+++ b/css/popup.css
@@ -82,7 +82,7 @@
     color: var(--color-red);
   }
   .btn_red:hover {
-    var(--color-white);
+    color: var(--color-white);
     background-color: var(--color-red);
   }
   
